# ros2-mocap_optitrack

./: .gitignore  README.md  launch_mocap_pub.sh  launch_world_to_base.sh
config/: natnetclient.yaml  world_to_base.yaml
launch/: launch.py  launch_y_up.py  launch_z_up.py
mocap_optitrack_client/: CMakeLists.txt  CMakeLists_old.txt  package.xml
mocap_optitrack_client/config/: natnetclient.yaml
mocap_optitrack_client/include/MoCapNatNetClient/: MoCapNatNetClient.h
mocap_optitrack_client/include/MoCapPublisher/: MoCapPublisher.h
mocap_optitrack_client/src/: MoCapNatNetClient.cpp  MoCapPublisher.cpp
mocap_optitrack_client_old/: CMakeLists.txt  package.xml
mocap_optitrack_client_old/src/: MoCapNatNetClient.cpp
mocap_optitrack_interfaces/: CMakeLists.txt  package.xml
mocap_optitrack_interfaces/msg/: CcDeltaConfiguration.msg  Configuration.msg  ConfigurationArray.msg  PccDeltaConfiguration.msg  PlanarCsConfiguration.msg  Point.msg  RigidBody.msg  RigidBodyArray.msg  UnitQuaternion.msg
mocap_optitrack_inv_kin/: CMakeLists.txt  package.xml
mocap_optitrack_inv_kin/config/: inverse_kinematics.yaml
mocap_optitrack_inv_kin/include/: InverseKinematics.h  InverseKinematics2D.h  InverseKinematics3D.h  InverseKinematicsNode.h
mocap_optitrack_inv_kin/src/: InverseKinematics.cpp  InverseKinematics2D.cpp  InverseKinematics3D.cpp  InverseKinematicsNode.cpp
mocap_optitrack_pub/: CMakeLists.txt  package.xml
mocap_optitrack_pub/include/MoCapNatNetClient/: MoCapNatNetClient.h
mocap_optitrack_pub/include/MoCapPublisher/: MoCapPublisher.h  myconfig.h
mocap_optitrack_pub/src/: MoCapPublisher.cpp
mocap_optitrack_w2b/: CMakeLists.txt  package.xml
mocap_optitrack_w2b/config/: world_to_base.yaml  world_to_base_y_up.yaml  world_to_base_z_up.yaml
mocap_optitrack_w2b/include/: WorldToBase.h  WtoBconfig.h
mocap_optitrack_w2b/src/: WorldToBase.cpp
