<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_optitrack_w2b</name>
  <version>0.0.1</version>
  <description>Package that is responsible of the change of coordinates from the Motive frame to the robot base. Basically the pose of each rigid body is represented in the robot base coordinates.</description>
  <author email="pietro.pustina@gmail.com">Pietro Pustina</author>
  <maintainer email="maximilian@stoelzle.ch">Maximilian Stölzle</maintainer>
  <license>MIT license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mocap_optitrack_interfaces</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
